Better footer layouts.

--- a/docs/layout/index.html
+++ b/docs/layout/index.html
@@ -3472,8 +3472,10 @@ Main content...
   }
 }
 .footer_logo {
-  width: 218px;
   margin-bottom: 0.625em;
+}
+.footer_logo .logo {
+  width: 218px;
 }
 .footer_address {
   font-family: &quot;AvenirNextLTW01-Regular&quot;, Arial, sans-serif;
@@ -3500,12 +3502,12 @@ Main content...
 .lt-ie9 .footer_address b {
   font-weight: normal !important;
 }
-@media only all and (min-width: 37.5em) {
+@media only all and (min-width: 48em) {
   .footer_address {
     font-size: 0.75em;
   }
 }
-@media only all and (min-width: 37.5em) {
+@media only all and (min-width: 48em) {
   .footer_address-word-break {
     display: block;
   }
@@ -3548,6 +3550,11 @@ Main content...
 .footer_general-inqueries .list__links .list_link.active {
   border-color: #43484e;
   color: #43484e;
+}
+@media only all and (min-width: 48em) {
+  .footer_general-inqueries {
+    font-size: 0.75em;
+  }
 }
 .footer_list {
   margin-bottom: 0;
@@ -3606,12 +3613,6 @@ Main content...
 .footer_list .list_link.focus {
   border-bottom-width: 1px !important;
 }
-.footer-l {
-  display: block;
-  position: relative;
-  margin-left: -15px;
-  margin-right: -15px;
-}
 .footer-pre {
   position: relative;
   margin-bottom: 2.8125em;
@@ -3641,6 +3642,14 @@ Main content...
     margin-left: 0;
   }
 }
+@media only all and (min-width: 75em) {
+  .footer-left-right.footer_nested-col-group {
+    display: block;
+    position: relative;
+    margin-left: -15px;
+    margin-right: -15px;
+  }
+}
 .footer-left {
   margin-bottom: 2.8125em;
 }
@@ -3657,7 +3666,6 @@ Main content...
     width: 33.33333333%;
     position: relative;
     right: 66.66666667%;
-    border-left: 0;
   }
   .ie .footer-left {
     margin-right: -0.26em;
@@ -3667,6 +3675,14 @@ Main content...
     margin-right: 0;
     zoom: 1;
     behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  }
+}
+@media only all and (min-width: 48em) {
+  .footer-left .footer_nested-col-group {
+    display: block;
+    position: relative;
+    margin-left: -15px;
+    margin-right: -15px;
   }
 }
 @media only all and (min-width: 48em) and (max-width: 74.9375em) {
@@ -3680,7 +3696,28 @@ Main content...
     margin-right: -0.25em;
     vertical-align: top;
     width: 50%;
-    border-left: 0;
+  }
+  .ie .footer-left .footer_logo {
+    margin-right: -0.26em;
+  }
+  .lt-ie8 .footer-left .footer_logo {
+    display: inline;
+    margin-right: 0;
+    zoom: 1;
+    behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  }
+}
+@media only all and (min-width: 75em) {
+  .footer-left .footer_logo {
+    display: inline-block;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    border: solid transparent;
+    border-width: 0 15px;
+    margin-right: -0.25em;
+    vertical-align: top;
+    width: 100%;
   }
   .ie .footer-left .footer_logo {
     margin-right: -0.26em;
@@ -3725,7 +3762,6 @@ Main content...
     margin-right: -0.25em;
     vertical-align: top;
     width: 50%;
-    border-left: 0;
   }
   .ie .footer-left .footer_address {
     margin-right: -0.26em;
@@ -3748,7 +3784,6 @@ Main content...
     margin-right: -0.25em;
     vertical-align: top;
     width: 25%;
-    border-right: 0;
   }
   .ie .footer-left .footer_general-inqueries {
     margin-right: -0.26em;
@@ -3771,7 +3806,6 @@ Main content...
     margin-right: -0.25em;
     vertical-align: top;
     width: 50%;
-    border-right: 0;
   }
   .ie .footer-left .footer_general-inqueries {
     margin-right: -0.26em;
@@ -3801,7 +3835,6 @@ Main content...
     width: 66.66666667%;
     position: relative;
     left: 33.33333333%;
-    border-right: 0;
   }
   .ie .footer-right {
     margin-right: -0.26em;
@@ -3813,7 +3846,15 @@ Main content...
     behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
   }
 }
-.footer-right .footer-l_col {
+@media only all and (min-width: 37.5em) {
+  .footer-right .footer_nested-col-group {
+    display: block;
+    position: relative;
+    margin-left: -15px;
+    margin-right: -15px;
+  }
+}
+.footer-right .footer_col {
   display: inline-block;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -3824,10 +3865,10 @@ Main content...
   vertical-align: top;
   width: 25%;
 }
-.ie .footer-right .footer-l_col {
+.ie .footer-right .footer_col {
   margin-right: -0.26em;
 }
-.lt-ie8 .footer-right .footer-l_col {
+.lt-ie8 .footer-right .footer_col {
   display: inline;
   margin-right: 0;
   zoom: 1;
