--- a/docs/layout/main.ie.html
+++ b/docs/layout/main.ie.html
@@ -3330,8 +3330,11 @@ Main content...
 }
 
 .footer_logo {
-  width: 218px;
   margin-bottom: 0.625em;
+}
+
+.footer_logo .logo {
+  width: 218px;
 }
 
 .footer_address {
@@ -3419,6 +3422,10 @@ Main content...
   color: #43484e;
 }
 
+.footer_general-inqueries {
+  font-size: 0.75em;
+}
+
 .footer_list {
   margin-bottom: 0;
 }
@@ -3487,13 +3494,6 @@ Main content...
   border-bottom-width: 1px !important;
 }
 
-.footer-l {
-  display: block;
-  position: relative;
-  margin-left: -15px;
-  margin-right: -15px;
-}
-
 .footer-pre {
   position: relative;
   margin-bottom: 2.8125em;
@@ -3530,6 +3530,13 @@ Main content...
   margin-bottom: 2.8125em;
 }
 
+.footer-left .footer_nested-col-group {
+  display: block;
+  position: relative;
+  margin-left: -15px;
+  margin-right: -15px;
+}
+
 .footer-left .footer_logo {
   display: inline-block;
   -webkit-box-sizing: border-box;
@@ -3540,7 +3547,6 @@ Main content...
   margin-right: -0.25em;
   vertical-align: top;
   width: 50%;
-  border-left: 0;
 }
 
 .ie .footer-left .footer_logo {
@@ -3587,7 +3593,6 @@ Main content...
   margin-right: -0.25em;
   vertical-align: top;
   width: 25%;
-  border-right: 0;
 }
 
 .ie .footer-left .footer_general-inqueries {
@@ -3601,7 +3606,14 @@ Main content...
   behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
-.footer-right .footer-l_col {
+.footer-right .footer_nested-col-group {
+  display: block;
+  position: relative;
+  margin-left: -15px;
+  margin-right: -15px;
+}
+
+.footer-right .footer_col {
   display: inline-block;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -3613,11 +3625,11 @@ Main content...
   width: 25%;
 }
 
-.ie .footer-right .footer-l_col {
+.ie .footer-right .footer_col {
   margin-right: -0.26em;
 }
 
-.lt-ie8 .footer-right .footer-l_col {
+.lt-ie8 .footer-right .footer_col {
   display: inline;
   margin-right: 0;
   zoom: 1;
