--- a/static/css/main.css
+++ b/static/css/main.css
@@ -9010,8 +9010,10 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
   }
 }
 .footer_logo {
-  width: 218px;
   margin-bottom: 0.625em;
+}
+.footer_logo .logo {
+  width: 218px;
 }
 .footer_address {
   font-family: "AvenirNextLTW01-Regular", Arial, sans-serif;
@@ -9038,12 +9040,12 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
 .lt-ie9 .footer_address b {
   font-weight: normal !important;
 }
-@media only all and (min-width: 37.5em) {
+@media only all and (min-width: 48em) {
   .footer_address {
     font-size: 0.75em;
   }
 }
-@media only all and (min-width: 37.5em) {
+@media only all and (min-width: 48em) {
   .footer_address-word-break {
     display: block;
   }
@@ -9086,6 +9088,11 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
 .footer_general-inqueries .list__links .list_link.active {
   border-color: #43484e;
   color: #43484e;
+}
+@media only all and (min-width: 48em) {
+  .footer_general-inqueries {
+    font-size: 0.75em;
+  }
 }
 .footer_list {
   margin-bottom: 0;
@@ -9144,12 +9151,6 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
 .footer_list .list_link.focus {
   border-bottom-width: 1px !important;
 }
-.footer-l {
-  display: block;
-  position: relative;
-  margin-left: -15px;
-  margin-right: -15px;
-}
 .footer-pre {
   position: relative;
   margin-bottom: 2.8125em;
@@ -9179,6 +9180,14 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
     margin-left: 0;
   }
 }
+@media only all and (min-width: 75em) {
+  .footer-left-right.footer_nested-col-group {
+    display: block;
+    position: relative;
+    margin-left: -15px;
+    margin-right: -15px;
+  }
+}
 .footer-left {
   margin-bottom: 2.8125em;
 }
@@ -9195,7 +9204,6 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
     width: 33.33333333%;
     position: relative;
     right: 66.66666667%;
-    border-left: 0;
   }
   .ie .footer-left {
     margin-right: -0.26em;
@@ -9205,6 +9213,14 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
     margin-right: 0;
     zoom: 1;
     behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  }
+}
+@media only all and (min-width: 48em) {
+  .footer-left .footer_nested-col-group {
+    display: block;
+    position: relative;
+    margin-left: -15px;
+    margin-right: -15px;
   }
 }
 @media only all and (min-width: 48em) and (max-width: 74.9375em) {
@@ -9218,7 +9234,28 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
     margin-right: -0.25em;
     vertical-align: top;
     width: 50%;
-    border-left: 0;
+  }
+  .ie .footer-left .footer_logo {
+    margin-right: -0.26em;
+  }
+  .lt-ie8 .footer-left .footer_logo {
+    display: inline;
+    margin-right: 0;
+    zoom: 1;
+    behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  }
+}
+@media only all and (min-width: 75em) {
+  .footer-left .footer_logo {
+    display: inline-block;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    border: solid transparent;
+    border-width: 0 15px;
+    margin-right: -0.25em;
+    vertical-align: top;
+    width: 100%;
   }
   .ie .footer-left .footer_logo {
     margin-right: -0.26em;
@@ -9263,7 +9300,6 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
     margin-right: -0.25em;
     vertical-align: top;
     width: 50%;
-    border-left: 0;
   }
   .ie .footer-left .footer_address {
     margin-right: -0.26em;
@@ -9286,7 +9322,6 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
     margin-right: -0.25em;
     vertical-align: top;
     width: 25%;
-    border-right: 0;
   }
   .ie .footer-left .footer_general-inqueries {
     margin-right: -0.26em;
@@ -9309,7 +9344,6 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
     margin-right: -0.25em;
     vertical-align: top;
     width: 50%;
-    border-right: 0;
   }
   .ie .footer-left .footer_general-inqueries {
     margin-right: -0.26em;
@@ -9339,7 +9373,6 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
     width: 66.66666667%;
     position: relative;
     left: 33.33333333%;
-    border-right: 0;
   }
   .ie .footer-right {
     margin-right: -0.26em;
@@ -9351,7 +9384,15 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
     behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
   }
 }
-.footer-right .footer-l_col {
+@media only all and (min-width: 37.5em) {
+  .footer-right .footer_nested-col-group {
+    display: block;
+    position: relative;
+    margin-left: -15px;
+    margin-right: -15px;
+  }
+}
+.footer-right .footer_col {
   display: inline-block;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -9362,10 +9403,10 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
   vertical-align: top;
   width: 25%;
 }
-.ie .footer-right .footer-l_col {
+.ie .footer-right .footer_col {
   margin-right: -0.26em;
 }
-.lt-ie8 .footer-right .footer-l_col {
+.lt-ie8 .footer-right .footer_col {
   display: inline;
   margin-right: 0;
   zoom: 1;
