--- a/_layouts/footer.html
+++ b/_layouts/footer.html
@@ -44,126 +44,134 @@
 
             </div><!-- END .footer-pre -->
 
-            <div class="footer-right">
-                <div class="footer-l">
-                    <div class="footer-l_col">
-                        <h2 class="h6">
-                            Researchers
-                        </h2>
-                        <ul class="list__unstyled">
-                            <li class="list_item">
-                                <a href="" class="list_link">
-                                    Datasets
-                                </a>
-                            </li>
-                            <li class="list_item">
-                                <a href="" class="list_link">
-                                    Reports
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="footer-l_col">
-                        <h2 class="h6">
-                            Developers
-                        </h2>
-                        <ul class="list__unstyled">
-                            <li class="list_item">
-                                <a href="" class="list_link">
-                                    API's
-                                </a>
-                            </li>
-                            <li class="list_item">
-                                <a href="" class="list_link">
-                                    Open source projects
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="footer-l_col">
-                        <h2 class="h6">
-                            Educators
-                        </h2>
-                        <ul class="list__unstyled">
-                            <li class="list_item">
-                                <a href="" class="list_link">
-                                    Toolkits
-                                </a>
-                            </li>
-                            <li class="list_item">
-                                <a href="" class="list_link">
-                                    Online learning
-                                </a>
-                            </li>
-                            <li class="list_item">
-                                <a href="" class="list_link">
-                                    Brochures
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="footer-l_col">
-                        <h2 class="h6">
-                            Regulated entities
-                        </h2>
-                        <ul class="list__unstyled">
-                            <li class="list_item">
-                                <a href="" class="list_link">
-                                    Regulations
-                                </a>
-                            </li>
-                            <li class="list_item">
-                                <a href="" class="list_link">
-                                    Notice and comment
-                                </a>
-                            </li>
-                            <li class="list_item">
-                                <a href="" class="list_link">
-                                    Compliance guides
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
+            <div class="footer-left-right footer_nested-col-group">
 
-                </div>
-            </div><!-- END .footer-right -->
+                <div class="footer-right">
+                    <div class="footer_nested-col-group">
+                        <div class="footer_col">
+                            <h2 class="h6">
+                                Researchers
+                            </h2>
+                            <ul class="list__unstyled">
+                                <li class="list_item">
+                                    <a href="" class="list_link">
+                                        Datasets
+                                    </a>
+                                </li>
+                                <li class="list_item">
+                                    <a href="" class="list_link">
+                                        Reports
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="footer_col">
+                            <h2 class="h6">
+                                Developers
+                            </h2>
+                            <ul class="list__unstyled">
+                                <li class="list_item">
+                                    <a href="" class="list_link">
+                                        API's
+                                    </a>
+                                </li>
+                                <li class="list_item">
+                                    <a href="" class="list_link">
+                                        Open source projects
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="footer_col">
+                            <h2 class="h6">
+                                Educators
+                            </h2>
+                            <ul class="list__unstyled">
+                                <li class="list_item">
+                                    <a href="" class="list_link">
+                                        Toolkits
+                                    </a>
+                                </li>
+                                <li class="list_item">
+                                    <a href="" class="list_link">
+                                        Online learning
+                                    </a>
+                                </li>
+                                <li class="list_item">
+                                    <a href="" class="list_link">
+                                        Brochures
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="footer_col">
+                            <h2 class="h6">
+                                Regulated entities
+                            </h2>
+                            <ul class="list__unstyled">
+                                <li class="list_item">
+                                    <a href="" class="list_link">
+                                        Regulations
+                                    </a>
+                                </li>
+                                <li class="list_item">
+                                    <a href="" class="list_link">
+                                        Notice and comment
+                                    </a>
+                                </li>
+                                <li class="list_item">
+                                    <a href="" class="list_link">
+                                        Compliance guides
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
 
-            <div class="footer-left">
+                    </div><!-- END .footer_nested-col-group -->
+                </div><!-- END .footer-right -->
 
-                <img class="footer_logo u-js-only"
-                     src="/static/img/logo.svg"
-                     onerror="this.onerror=null;this.src='/static/img/logo.png';"
-                     alt="Consumer Financial Protection Bureau">
-                <noscript>
-                    <img class="footer_logo logo__no-js"
-                         src="/static/img/logo.png"
-                         alt="Consumer Financial Protection Bureau">
-                </noscript>
-                <p class="footer_address">
-                    <span class="footer_address-word-break">
-                        Consumer Financial
-                    </span>
-                    Protection Bureau<br>
-                    1700 G Street, NW<br>
-                    Washington, D.C. 20552
-                </p>
-                <div class="footer_general-inqueries">
-                    <b>For general inquiries only</b>
-                    <ul class="list list__links">
-                        <li>
-                            <a class="list_link" href="tel:202-435-7000">
-                                (202) 435-7000
-                            </a>
-                        </li>
-                        <li>
-                            <a class="list_link" href="mailto:Info@consumerfinance.gov">
-                                Info@consumerfinance.gov
-                            </a>
-                        </li>
-                    </ul>
-                </div>
+                <div class="footer-left">
+                    <div class="footer_nested-col-group">
 
-            </div><!-- END .footer-left -->
+                        <div class="footer_logo">
+                            <img class="logo u-js-only"
+                                 src="/static/img/logo.svg"
+                                 onerror="this.onerror=null;this.src='/static/img/logo.png';"
+                                 alt="Consumer Financial Protection Bureau">
+                            <noscript>
+                                <img class="logo logo__no-js"
+                                     src="/static/img/logo.png"
+                                     alt="Consumer Financial Protection Bureau">
+                            </noscript>
+                        </div>
+                        <p class="footer_address">
+                            <span class="footer_address-word-break">
+                                Consumer Financial
+                            </span>
+                            Protection Bureau<br>
+                            1700 G Street, NW<br>
+                            Washington, D.C. 20552
+                        </p>
+                        <div class="footer_general-inqueries">
+                            <b>For general inquiries only</b>
+                            <ul class="list list__links">
+                                <li>
+                                    <a class="list_link" href="tel:202-435-7000">
+                                        (202) 435-7000
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="list_link" href="mailto:Info@consumerfinance.gov">
+                                        Info@consumerfinance.gov
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+
+                    </div><!-- END .footer_nested-col-group -->
+                </div><!-- END .footer-left -->
+                
+            </div><!-- END .footer_nested-col-group -->
 
             <div class="footer-post">
 
