Some missing linkss added and some polish to the footer.

--- a/_layouts/footer.html
+++ b/_layouts/footer.html
@@ -52,7 +52,7 @@
                             <h2 class="h6">
                                 Researchers
                             </h2>
-                            <ul class="list__unstyled">
+                            <ul class="list list__links">
                                 <li class="list_item">
                                     <a href="" class="list_link">
                                         Datasets
@@ -69,7 +69,7 @@
                             <h2 class="h6">
                                 Developers
                             </h2>
-                            <ul class="list__unstyled">
+                            <ul class="list list__links">
                                 <li class="list_item">
                                     <a href="" class="list_link">
                                         API's
@@ -86,7 +86,7 @@
                             <h2 class="h6">
                                 Educators
                             </h2>
-                            <ul class="list__unstyled">
+                            <ul class="list list__links">
                                 <li class="list_item">
                                     <a href="" class="list_link">
                                         Toolkits
@@ -108,7 +108,7 @@
                             <h2 class="h6">
                                 Regulated entities
                             </h2>
-                            <ul class="list__unstyled">
+                            <ul class="list list__links">
                                 <li class="list_item">
                                     <a href="" class="list_link">
                                         Regulations
@@ -153,10 +153,10 @@
                             Washington, D.C. 20552
                         </p>
                         <div class="footer_general-inqueries">
-                            <b>For general inquiries only</b>
+                            <b class="footer_general-inqueries-label">For general inquiries only</b>
                             <ul class="list list__links">
                                 <li>
-                                    <a class="list_link" href="tel:202-435-7000">
+                                    <a class="list_link footer_general-inqueries-phone" href="tel:202-435-7000">
                                         (202) 435-7000
                                     </a>
                                 </li>
@@ -202,17 +202,17 @@
                         </a>
                     </li>
                     <li class="list_item">
-                        <a class="list_link" href="#">
+                        <a class="list_link" href="http://usa.gov/">
                             USA.gov
                         </a>
                     </li>
                     <li class="list_item">
-                        <a class="list_link" href="#">
+                        <a class="list_link" href="http://www.federalreserve.gov/oig/default.htm">
                             Office of Inspector General
                         </a>
                     </li>
                     <li class="list_item">
-                        <a class="list_link" href="#">
+                        <a class="list_link" href="http://www.consumerfinance.gov/ombudsman/">
                             Ombudsman
                         </a>
                     </li>
