--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -9631,7 +9631,7 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
 
 .footer {
   padding-top: 3.125em;
-  padding-bottom: 2.8125em;
+  padding-bottom: 3.125em;
   border-top: 3px solid #2cb34a;
   background: #f1f2f2;
 }
@@ -9756,6 +9756,10 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
   margin-bottom: 0.625em;
 }
 
+.footer_logo {
+  margin-bottom: 0;
+}
+
 .footer_logo .logo {
   width: 218px;
 }
@@ -9791,6 +9795,7 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
 }
 
 .footer_address {
+  margin-bottom: 0;
   font-size: 0.75em;
 }
 
@@ -9798,7 +9803,11 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
   display: block;
 }
 
-.footer_general-inqueries b {
+.footer_general-inqueries {
+  font-size: 0.75em;
+}
+
+.footer_general-inqueries-label {
   display: block;
   margin-bottom: 0.5em;
   font-family: "AvenirNextLTW01-Demi", Arial, sans-serif;
@@ -9806,8 +9815,13 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
   font-weight: bold;
 }
 
-.lt-ie9 .footer_general-inqueries b {
+.lt-ie9 .footer_general-inqueries-label {
   font-weight: normal !important;
+}
+
+.footer_general-inqueries-label {
+  display: block;
+  margin-bottom: 0.5em;
 }
 
 .footer_general-inqueries .list__links {
@@ -9816,37 +9830,94 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
   border-top-color: #43484e;
 }
 
-.footer_general-inqueries .list__links .list_link {
+.footer_general-inqueries .list_link {
   color: #43484e;
   border-color: #43484e;
 }
 
-.footer_general-inqueries .list__links .list_link:visited,
-.footer_general-inqueries .list__links .list_link.visited {
+.footer_general-inqueries .list_link:visited,
+.footer_general-inqueries .list_link.visited {
   border-color: #43484e;
   color: #43484e;
 }
 
-.footer_general-inqueries .list__links .list_link:hover,
-.footer_general-inqueries .list__links .list_link.hover {
+.footer_general-inqueries .list_link:hover,
+.footer_general-inqueries .list_link.hover {
   border-color: #43484e;
   color: #43484e;
 }
 
-.footer_general-inqueries .list__links .list_link:focus,
-.footer_general-inqueries .list__links .list_link.focus {
+.footer_general-inqueries .list_link:focus,
+.footer_general-inqueries .list_link.focus {
   border-color: #43484e;
   color: #43484e;
 }
 
-.footer_general-inqueries .list__links .list_link:active,
-.footer_general-inqueries .list__links .list_link.active {
+.footer_general-inqueries .list_link:active,
+.footer_general-inqueries .list_link.active {
   border-color: #43484e;
   color: #43484e;
 }
 
-.footer_general-inqueries {
-  font-size: 0.75em;
+.footer_general-inqueries .list_link {
+  color: #0072ce;
+  border-color: #0072ce;
+}
+
+.footer_general-inqueries .list_link:visited,
+.footer_general-inqueries .list_link.visited {
+  border-color: #005e5d;
+  color: #005e5d;
+}
+
+.footer_general-inqueries .list_link:hover,
+.footer_general-inqueries .list_link.hover {
+  border-color: #7fb8e6;
+  color: #7fb8e6;
+}
+
+.footer_general-inqueries .list_link:focus,
+.footer_general-inqueries .list_link.focus {
+  border-color: #0072ce;
+  color: #0072ce;
+}
+
+.footer_general-inqueries .list_link:active,
+.footer_general-inqueries .list_link.active {
+  border-color: #002d72;
+  color: #002d72;
+}
+
+.footer_general-inqueries .list_link.footer_general-inqueries-phone {
+  color: #101820;
+  border-color: #101820;
+  border-bottom-width: 0 !important;
+  display: block;
+  margin-bottom: 0.33333333em;
+}
+
+.footer_general-inqueries .list_link.footer_general-inqueries-phone:visited,
+.footer_general-inqueries .list_link.footer_general-inqueries-phone.visited {
+  border-color: #101820;
+  color: #101820;
+}
+
+.footer_general-inqueries .list_link.footer_general-inqueries-phone:hover,
+.footer_general-inqueries .list_link.footer_general-inqueries-phone.hover {
+  border-color: #101820;
+  color: #101820;
+}
+
+.footer_general-inqueries .list_link.footer_general-inqueries-phone:focus,
+.footer_general-inqueries .list_link.footer_general-inqueries-phone.focus {
+  border-color: #101820;
+  color: #101820;
+}
+
+.footer_general-inqueries .list_link.footer_general-inqueries-phone:active,
+.footer_general-inqueries .list_link.footer_general-inqueries-phone.active {
+  border-color: #101820;
+  color: #101820;
 }
 
 .footer_list {
@@ -9922,6 +9993,12 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
   margin-bottom: 2.8125em;
 }
 
+.footer-pre {
+  padding-bottom: 1.875em;
+  margin-bottom: 1.875em;
+  border-bottom: 1px solid #babbbd;
+}
+
 .footer-pre .footer_share-icon-list {
   position: absolute;
   top: -9px;
@@ -9947,6 +10024,10 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
 .footer-pre .footer_nav-list .list_item {
   margin-right: 0.25em;
   margin-left: 0;
+}
+
+.footer-pre .footer_nav-list .list_item {
+  margin-bottom: 0;
 }
 
 .footer-left {
@@ -10029,6 +10110,12 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
   behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
+.footer-right {
+  padding-bottom: 1.875em;
+  margin-bottom: 1.875em;
+  border-bottom: 1px solid #babbbd;
+}
+
 .footer-right .footer_nested-col-group {
   display: block;
   position: relative;
@@ -10059,7 +10146,22 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
   behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
+.footer-right .list {
+  margin-bottom: 0;
+}
+
+.footer-post {
+  padding-top: 1.875em;
+  margin-top: 1.875em;
+  border-top: 1px solid #babbbd;
+}
+
 .footer-post .footer_list {
+  margin-bottom: 0.625em;
+}
+
+.footer-post .footer_list {
+  margin-bottom: 0;
   padding-left: 0;
 }
 
@@ -10074,6 +10176,15 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
 .footer-post .footer_list .list_item {
   margin-right: 0.25em;
   margin-left: 0;
+}
+
+.footer-post .footer_list .list_item {
+  margin-right: 30px;
+  margin-bottom: 0.625em;
+}
+
+.footer-post .footer_list .list_item + .list_item {
+  margin-top: 0;
 }
 
 /* topdoc
