--- a/docs/layout/index.html
+++ b/docs/layout/index.html
@@ -3365,7 +3365,7 @@ Main content...
       <div class="docs-css">
         <pre class="docs-code"><code data-language="css">.footer {
   padding-top: 3.125em;
-  padding-bottom: 2.8125em;
+  padding-bottom: 3.125em;
   border-top: 3px solid #2cb34a;
   background: #f1f2f2;
 }
@@ -3474,6 +3474,11 @@ Main content...
 .footer_logo {
   margin-bottom: 0.625em;
 }
+@media only all and (min-width: 48em) {
+  .footer_logo {
+    margin-bottom: 0;
+  }
+}
 .footer_logo .logo {
   width: 218px;
 }
@@ -3504,6 +3509,7 @@ Main content...
 }
 @media only all and (min-width: 48em) {
   .footer_address {
+    margin-bottom: 0;
     font-size: 0.75em;
   }
 }
@@ -3512,48 +3518,109 @@ Main content...
     display: block;
   }
 }
-.footer_general-inqueries b {
+@media only all and (min-width: 48em) {
+  .footer_general-inqueries {
+    font-size: 0.75em;
+  }
+}
+.footer_general-inqueries-label {
   display: block;
   margin-bottom: 0.5em;
   font-family: &quot;AvenirNextLTW01-Demi&quot;, Arial, sans-serif;
   font-style: normal;
   font-weight: bold;
 }
-.lt-ie9 .footer_general-inqueries b {
+.lt-ie9 .footer_general-inqueries-label {
   font-weight: normal !important;
+}
+@media only all and (min-width: 48em) {
+  .footer_general-inqueries-label {
+    display: block;
+    margin-bottom: 0.5em;
+  }
 }
 .footer_general-inqueries .list__links {
   margin-bottom: 0;
   font-size: 1.125em;
   border-top-color: #43484e;
 }
-.footer_general-inqueries .list__links .list_link {
+.footer_general-inqueries .list_link {
   color: #43484e;
   border-color: #43484e;
 }
-.footer_general-inqueries .list__links .list_link:visited,
-.footer_general-inqueries .list__links .list_link.visited {
+.footer_general-inqueries .list_link:visited,
+.footer_general-inqueries .list_link.visited {
   border-color: #43484e;
   color: #43484e;
 }
-.footer_general-inqueries .list__links .list_link:hover,
-.footer_general-inqueries .list__links .list_link.hover {
+.footer_general-inqueries .list_link:hover,
+.footer_general-inqueries .list_link.hover {
   border-color: #43484e;
   color: #43484e;
 }
-.footer_general-inqueries .list__links .list_link:focus,
-.footer_general-inqueries .list__links .list_link.focus {
+.footer_general-inqueries .list_link:focus,
+.footer_general-inqueries .list_link.focus {
   border-color: #43484e;
   color: #43484e;
 }
-.footer_general-inqueries .list__links .list_link:active,
-.footer_general-inqueries .list__links .list_link.active {
+.footer_general-inqueries .list_link:active,
+.footer_general-inqueries .list_link.active {
   border-color: #43484e;
   color: #43484e;
 }
 @media only all and (min-width: 48em) {
-  .footer_general-inqueries {
-    font-size: 0.75em;
+  .footer_general-inqueries .list_link {
+    color: #0072ce;
+    border-color: #0072ce;
+  }
+  .footer_general-inqueries .list_link:visited,
+  .footer_general-inqueries .list_link.visited {
+    border-color: #005e5d;
+    color: #005e5d;
+  }
+  .footer_general-inqueries .list_link:hover,
+  .footer_general-inqueries .list_link.hover {
+    border-color: #7fb8e6;
+    color: #7fb8e6;
+  }
+  .footer_general-inqueries .list_link:focus,
+  .footer_general-inqueries .list_link.focus {
+    border-color: #0072ce;
+    color: #0072ce;
+  }
+  .footer_general-inqueries .list_link:active,
+  .footer_general-inqueries .list_link.active {
+    border-color: #002d72;
+    color: #002d72;
+  }
+}
+@media only all and (min-width: 48em) {
+  .footer_general-inqueries .list_link.footer_general-inqueries-phone {
+    color: #101820;
+    border-color: #101820;
+    border-bottom-width: 0 !important;
+    display: block;
+    margin-bottom: 0.33333333em;
+  }
+  .footer_general-inqueries .list_link.footer_general-inqueries-phone:visited,
+  .footer_general-inqueries .list_link.footer_general-inqueries-phone.visited {
+    border-color: #101820;
+    color: #101820;
+  }
+  .footer_general-inqueries .list_link.footer_general-inqueries-phone:hover,
+  .footer_general-inqueries .list_link.footer_general-inqueries-phone.hover {
+    border-color: #101820;
+    color: #101820;
+  }
+  .footer_general-inqueries .list_link.footer_general-inqueries-phone:focus,
+  .footer_general-inqueries .list_link.footer_general-inqueries-phone.focus {
+    border-color: #101820;
+    color: #101820;
+  }
+  .footer_general-inqueries .list_link.footer_general-inqueries-phone:active,
+  .footer_general-inqueries .list_link.footer_general-inqueries-phone.active {
+    border-color: #101820;
+    color: #101820;
   }
 }
 .footer_list {
@@ -3618,6 +3685,13 @@ Main content...
   margin-bottom: 2.8125em;
 }
 @media only all and (min-width: 48em) {
+  .footer-pre {
+    padding-bottom: 1.875em;
+    margin-bottom: 1.875em;
+    border-bottom: 1px solid #babbbd;
+  }
+}
+@media only all and (min-width: 48em) {
   .footer-pre .footer_share-icon-list {
     position: absolute;
     top: -9px;
@@ -3641,6 +3715,9 @@ Main content...
     margin-right: 0.25em;
     margin-left: 0;
   }
+  .footer-pre .footer_nav-list .list_item {
+    margin-bottom: 0;
+  }
 }
 @media only all and (min-width: 75em) {
   .footer-left-right.footer_nested-col-group {
@@ -3648,6 +3725,8 @@ Main content...
     position: relative;
     margin-left: -15px;
     margin-right: -15px;
+    margin-left: -30px;
+    margin-right: -30px;
   }
 }
 .footer-left {
@@ -3664,8 +3743,11 @@ Main content...
     margin-right: -0.25em;
     vertical-align: top;
     width: 33.33333333%;
-    position: relative;
     right: 66.66666667%;
+    border-left-width: 30px;
+    border-right-width: 30px;
+    position: relative;
+    margin-bottom: 0;
   }
   .ie .footer-left {
     margin-right: -0.26em;
@@ -3675,6 +3757,16 @@ Main content...
     margin-right: 0;
     zoom: 1;
     behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  }
+  .footer-left:after {
+    content: &quot;&quot;;
+    position: absolute;
+    top: -1.875em;
+    right: -30px;
+    bottom: -1.875em;
+    display: block;
+    width: 1px;
+    background: #babbbd;
   }
 }
 @media only all and (min-width: 48em) {
@@ -3718,6 +3810,7 @@ Main content...
     margin-right: -0.25em;
     vertical-align: top;
     width: 100%;
+    margin-bottom: 1.25em;
   }
   .ie .footer-left .footer_logo {
     margin-right: -0.26em;
@@ -3817,9 +3910,16 @@ Main content...
     behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
   }
 }
-@media only all and (max-width: 37.4375em) {
+@media only all and (max-width: 47.9375em) {
   .footer-right {
     display: none;
+  }
+}
+@media only all and (min-width: 48em) and (max-width: 74.9375em) {
+  .footer-right {
+    padding-bottom: 1.875em;
+    margin-bottom: 1.875em;
+    border-bottom: 1px solid #babbbd;
   }
 }
 @media only all and (min-width: 75em) {
@@ -3835,6 +3935,8 @@ Main content...
     width: 66.66666667%;
     position: relative;
     left: 33.33333333%;
+    border-left-width: 30px;
+    border-right-width: 30px;
   }
   .ie .footer-right {
     margin-right: -0.26em;
@@ -3846,7 +3948,7 @@ Main content...
     behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
   }
 }
-@media only all and (min-width: 37.5em) {
+@media only all and (min-width: 48em) {
   .footer-right .footer_nested-col-group {
     display: block;
     position: relative;
@@ -3874,8 +3976,24 @@ Main content...
   zoom: 1;
   behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
+@media only all and (min-width: 48em) {
+  .footer-right .list {
+    margin-bottom: 0;
+  }
+}
+@media only all and (min-width: 48em) {
+  .footer-post {
+    padding-top: 1.875em;
+    margin-top: 1.875em;
+    border-top: 1px solid #babbbd;
+  }
+}
+.footer-post .footer_list {
+  margin-bottom: 0.625em;
+}
 @media only all and (min-width: 30em) {
   .footer-post .footer_list {
+    margin-bottom: 0;
     padding-left: 0;
   }
   .footer-post .footer_list .list_item {
@@ -3887,6 +4005,13 @@ Main content...
   .footer-post .footer_list .list_item {
     margin-right: 0.25em;
     margin-left: 0;
+  }
+  .footer-post .footer_list .list_item {
+    margin-right: 30px;
+    margin-bottom: 0.625em;
+  }
+  .footer-post .footer_list .list_item + .list_item {
+    margin-top: 0;
   }
 }</code></pre>
       </div>
